<resources>
    <string name="app_name">Лист покупок</string>
    <string name="settings">Настройки</string>
    <string name="notes">Заметки</string>
    <string name="shop_list">Лист покупок</string>
    <string name="new_item">Новый</string>
    <string name="item_name">Название</string>
    <string name="item_info">Дополнительная информация</string>
    <string name="title_hint">Заголовок</string>
    <string name="description_hint">Описание</string>
    <string name="new_list">Новое название списка</string>
    <string name="list_name">Название списка</string>
    <string name="create_list">Создать список</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_item">Вы хотите удалить этот элемент?</string>
    <string name="delete_alert">Удалить</string>
    <string name="delete_cansel">Отменить</string>
    <string name="Empty">Пусто</string>
    <string name="update">Изменить</string>
    <string name="update_list_item">Изменить элемент списка</string>
    <string name="hint_new_item">Новый элемент</string>
    <string name="general">Общие</string>
    <string name="chose_not_style">Выбрать стиль</string>
    <string name="chose_time_format">Выбрать формат времени</string>
    <string name="remove_ads">Отключить рекламу</string>
    <string name="remove_ads_summary">Удалить всю рекламу из этого приложения</string>
    <string name="theme_settings">Настройка темы</string>
    <string name="chose_theme_settings">Выбор темы</string>
    <string name="note_text_settings">Настройка текста заметок</string>
    <string name="title_text_size">Выбор размера текста заголовка</string>
    <string name="content_text_size">Выбор размера текста заметок</string>
</resources>