<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<PreferenceCategory android:title="@string/general">
    <ListPreference
        android:defaultValue="Linear"
        android:entries="@array/not_style_array"
        android:entryValues="@array/values"
        android:key="not_style_key"
        android:icon="@drawable/ic_style"
        app:useSimpleSummaryProvider="true"
        android:title="@string/chose_not_style" />
    <ListPreference
        android:defaultValue="hh:mm:ss - yyyy/MM/dd"
        android:entries="@array/time_format_array"
        android:entryValues="@array/time_format_values"
        android:key="time_format_key"
        android:icon="@drawable/ic_time_format"
        app:useSimpleSummaryProvider="true"
        android:title="@string/chose_time_format" />
    <Preference
        android:title="@string/remove_ads"
        android:summary="@string/remove_ads_summary"
        android:icon="@drawable/ic_remove_ads"
        />
    <PreferenceCategory android:title="@string/theme_settings">

        <ListPreference
            android:defaultValue="blue"
            android:entries="@array/chose_theme_array"
            android:entryValues="@array/chose_theme_values"
            android:key="theme_key"
            android:icon="@drawable/ic_theme_style"
            app:useSimpleSummaryProvider="true"
            android:title="@string/chose_theme_settings" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/note_text_settings">

        <ListPreference
            android:defaultValue="16"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_value"
            android:key="title_size_key"
            android:icon="@drawable/ic_text"
            app:useSimpleSummaryProvider="true"
            android:title="@string/title_text_size" />
        <ListPreference
            android:defaultValue="14"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_value"
            android:key="content_size_key"
            android:icon="@drawable/ic_text"
            app:useSimpleSummaryProvider="true"
            android:title="@string/content_text_size" />
    </PreferenceCategory>
</PreferenceCategory>
</androidx.preference.PreferenceScreen>